--- a/portfolio-master/portfolio-master/app/routes/home/profile.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/profile.module.css
@@ -1,5 +1,5 @@
 .profile {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   margin-top: 60px;
   margin-bottom: 40px;
